bluejay-parser/tests/snapshots/executable_document_integration_test__error@empty_selection_set.graphql.snap
---
source: bluejay-parser/tests/executable_document_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/executable_document/error/empty_selection_set.graphql
---
Error: Unexpected token
   ╭─[empty_selection_set.graphql:1:2]
   │
 1 │ {}
   │  ┬  
   │  ╰── Unexpected token
───╯
